# ProMesh

./: .gitignore  CMakeLists.txt  LICENSE  ProMesh.qrc  ProMesh3.pro  ProMesh3.qrc  QDebugStream.h  README.md  adjust_edge_length.ui  bundle_app  color_widget.cpp  delegates.cpp  doxy_config.txt  ideas.txt  main.cpp  main_window_input.cpp  promesh_license.txt  promesh_license_with_cite.txt  rclick_menu_scene_inspector.cpp  readme.txt  readme_compilation.txt  recent_changes.txt  scene_item_model.cpp  scene_item_model.h  shortcuts.txt  version.txt
deploy_data/: AppIcon.icns  Info.plist  ProMeshIcon.rc
docs/: annotated.html  annotated.js  classes.html  dir_a188a44384d1db04175855e2d84d1b69.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_q.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_v.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  (+116 more)
docs/html/: annotated.html  annotated.js  classes.html  classstd_1_1string.html  classstd_1_1vector.html  dir_5a65c234afd0f15d535260f2845b5fc1.html  dir_a188a44384d1db04175855e2d84d1b69.html  doxyStyle.css  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_q.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_v.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  (+244 more)
docs/search/: all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_7.js  all_9.js  all_e.js  classes_1.js  classes_2.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_c.js  functions_e.js  groups_0.js  groups_11.js  groups_12.js  groups_3.js  groups_4.js  groups_5.js  groups_7.js  groups_d.js  groups_e.js  groups_f.js  (+4 more)
docugen/: CMakeLists.txt  DoxygenConfig.txt  DoxygenLayout.xml  about.doxygen  contact.doxygen  controls.doxygen  docugen.cpp  external_libraries.doxygen  main_page.doxygen  promesh_license.doxygen  shortcuts.doxygen
docugen/doxysrc/: DoxygenConfig.txt  DoxygenLayout.xml  about.doxygen  contact.doxygen  controls.doxygen  doxyFooter.css  external_libraries.doxygen  main_page.doxygen  promesh_license.doxygen  shortcuts.doxygen
resources/: default-script.lua  greetings.txt
scene/: lg_include.h  lg_object.cpp  lg_object.h  lg_scene.cpp  lg_scene.h  lg_tmp_methods.cpp  renderer.h  scene_template.h  scene_template_impl.hpp
scripts/Smoothing/: crease-smoothing.lua
src/: QDebugStream.h  app.cpp  app.h  arg_tool.h  clip_plane_widget.cpp  clip_plane_widget.h  color_widget.cpp  color_widget.h  delegates.cpp  delegates.h  docugen.cpp  docugen.h  gl_includes.h  main.cpp  main_window.cpp  main_window.h  main_window_input.cpp  modeltest.cpp  rclick_menu_scene_inspector.cpp  rclick_menu_scene_inspector.h  scene_inspector.cpp  scene_inspector.h  scene_item_model.cpp  scene_item_model.h  scripting.cpp  scripting.h  sera_test.h  serialization.h  undo.cpp  undo.h
src/modules/: mesh_module.cpp  mesh_module.h  module_interface.cpp  module_interface.h
src/options/: draw_path_options.h  options.h  undo_options.h
src/scene/: csg_object.cpp  csg_object.h  lg_include.h  lg_object.cpp  lg_object.h  lg_scene.cpp  lg_scene.h  lg_scene_impl.hpp  lg_tmp_methods.cpp  plane_sphere.cpp  plane_sphere.h  renderer.cpp  scene_interface.cpp  scene_interface.h  scene_template.h  scene_template_impl.hpp
src/tools/: camera_tools.cpp  coordinate_transform_tools.cpp  fracture_tools.cpp  grid_generation_tools.cpp  info_tools.cpp  mark_tools.cpp  refinement_tools.cpp  registry_tools.cpp  remeshing_tools.cpp  script_tools.cpp  script_tools.h  selection_tools.cpp  standard_tools.cpp  standard_tools.h  subset_tools.cpp  tetgen_tools.cpp  tool_coordinates.cpp  tool_coordinates.h  tool_dialog.cpp  tool_dialog.h  tool_frac_to_layer.cpp  tool_frac_to_layer.h  tool_manager.cpp  tool_manager.h  tools_util.h  topology_tools.cpp
src/util/: file_util.cpp  file_util.h  qstring_util.cpp  qstring_util.h
src/view3d/: renderer3d_interface.h  view3d.cpp  view3d.h
src/widgets/: coordinates_widget.cpp  coordinates_widget.h  double_slider.cpp  double_slider.h  extendible_widget.cpp  extendible_widget.h  file_widget.cpp  file_widget.h  help_browser.cpp  help_browser.h  icon_tab_widget.cpp  icon_tab_widget.h  live_script_dialog.cpp  live_script_dialog.h  matrix_widget.cpp  matrix_widget.h  projector_widget.cpp  projector_widget.h  property_widget.cpp  property_widget.h  property_widget_impl.h  script_editor.cpp  script_editor.h  tool_browser_widget.cpp  tool_browser_widget.h  tooldlg_iarchive.h  widget_list.cpp  (+6 more)
styles/: dark_theme_variables.txt  promesh_style.css  promesh_style.txt
tools/: grid_generation_tools.cpp  object_tools.cpp  remeshing_tools.cpp  selection_tools.cpp  standard_tools.cpp  standard_tools.h  tool_dialog.cpp  tool_dialog.h  tool_frac_to_layer.h  tool_manager.h
view3d/: view3d.h
widgets/: extendible_widget.h  icon_tab_widget.h  widget_container.cpp  widget_list.cpp  widget_list.h
(+98 files in other folders)
